# backend/swagger.yaml
@@ -406,4 +406,34 @@ paths:
           description: Unprocessable Entity
                 
 
+  /search:
+  
+    get:
+      operationId: search
+      description: this is used for searching notes
+      summary: search
+      tags:
+        - Search
+      parameters:
+        - name: Authorization
+          type: string
+          in: header
+          required: true
+        - name: search
+          type: string
+          in: query
+          required: true
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              notes:
+                type: array
+                items:
+                  $ref: '#/definitions/note'
+              num_notes:
+                type: integer
+                example: 1
   
